# uv-monorepo

./: README.md  main.py  pyproject.toml
projects/lib-one/: pyproject.toml
projects/lib-one/src/lib_one/: __init__.py  str_utils.py
projects/lib-two/: pyproject.toml
projects/lib-two/src/lib_two/: main.py
