[project]
name = "uv-monorepo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pyright>=1.1.404",
    "ruff>=0.12.11",
]

[tool.uv.workspace]
members = [
    "projects/lib-one",
    "projects/lib-two",
]
